<resources>
    <string name="app_name">Assignment</string>

    <string name="no_internet">Please check your internet connection</string>
    <string name="network_error">Network error, could get data,please try again!</string>
    <string name="project_name">Project</string>
    <string name="add">Add</string>
    <string name="projects">Projects</string>
    <string name="no_data_found">No Data Found</string>
    <string name="no_comments_found">No Comments Found</string>
    <string name="project_added_successfully">Project Added</string>
    <string name="project_added_failure">Failed to add project ,please try again later</string>
    <string name="tasks">Tasks</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="task_details">Task Details</string>
    <string name="edit">Edit</string>
    <string name="send_to_review">Send To Review</string>
    <string name="send">Send</string>
    <string name="comment">Comment</string>
    <string name="comments">Comments</string>
</resources>